# kaomoji-labeled-tool

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
config/: canonical_tags.yaml  export.yaml  tag_aliases.yaml  tag_normalization.yaml  tag_removal.yaml
src/kaomoji_labeled_tool/: approved_tag_merges.py  cli.py  config.py  filtering.py  loader.py  models.py  normalization.py  pipeline.py  preprocess.py  quality.py  step6_batch.py  step6_eval.py  step6_prompting.py  step6_render.py  step6_review.py  step6_review_app.py  step6_selection.py  step7_export.py  step8_dataset.py
tests/: test_cli.py  test_pipeline_steps1_to_4.py  test_pipeline_steps1_to_5.py  test_pipeline_steps1_to_6_prep.py  test_step1_loading.py  test_step2_preprocess.py  test_step3_filtering.py  test_step4_normalization.py  test_step5_quality.py  test_step6_batch.py  test_step6_eval.py  test_step6_models.py  test_step6_prompting.py  test_step6_render.py  test_step6_review.py  test_step6_review_app.py  test_step6_selection.py  test_step6_submission_runner.py  test_step7_export.py  test_step8_dataset.py
